#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-31
2013-08-26 Andy Salnikov
- add auto-constructors for some complex data types

Tag: V00-04-30
2013-08-14 Andy Salnikov
- add releaseCode() method to evr.EventCodeV5 and evr.EventCodeV6

Tag: V00-04-29
2013-07-16 Andy Salnikov
- imp: add one forgotten constant

Tag: V00-04-28
2013-05-22 Andy Salnikov
- bug fix in imp.ddl.xml, Sample._channels is 16 bit instead of 32

Tag: V00-04-27
2013-05-15 Andy Salnikov
- adding imp package

Tag: V00-04-26
2013-04-25 Andy Salnikov
- upgrading to pdsdata V06-07-04
- new class cspad.ConfigV5

Tag: V00-04-25
2013-04-23 Andy Salnikov
- pnccd.FullFrameV1 does not need xtc-config

Tag: V00-04-24
2013-03-29 Andy Salnikov
- wider use of enum base type feature

Tag: V00-04-23
2013-03-28 Andy Salnikov
- updated comments in acqiris schema

Tag: V00-04-22
2013-03-26 Andy Salnikov
- small changes to cspad scheme to make it work with HDF5

Tag: V00-04-21
2013-03-25 Andy Salnikov
- small changes to Orca scheme to make it work better with HDF5

Tag: V00-04-20
2013-03-25 Andy Salnikov
- make princeton DDL usable with HDF5

Tag: V00-04-19
2013-03-24 Andy Salnikov
- encoder schema: use new enum-base feature to define attributes 

Tag: V00-04-18
2013-03-22 Andy Salnikov
- fli: update to support HDF5

Tag: V00-04-17
2013-03-22 Andy Salnikov
- gsc16ai.ddl.xml: use new enum-base feature to define attributes to have
  enum types instead of ints

Tag: V00-04-16
2013-03-22 Andy Salnikov
- gsc16ai.ddl.xml: fix numChannels() implementation to be usable with HDF5

Tag: V00-04-15
2013-03-22 Andy Salnikov
- removed version() method from oceanoptics.DataV1 interface, pdsdata