@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-32
+2013-08-26 Andy Salnikov
+- add auto-constructors for for EPICS types
+
 Tag: V00-04-31
 2013-08-26 Andy Salnikov
 - add auto-constructors for some complex data types
